# goop-shield-community

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_NOTES_v0.2.1.md  SECURITY.md  agents.txt  cliff.toml  index.html  llms.txt  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: validate_test_plan.py
.github/workflows/: ci.yml  docs.yml  rc.yml  release.yml  security.yml  stale.yml  workflow-sanity.yml
adapters/: index.html
api/: index.html
api-reference/: index.html
architecture/: index.html
config/: shield.yaml  shield_active_fusion.yaml  shield_balanced.yaml  shield_permissive.yaml  shield_shadow_fusion.yaml  shield_strict.yaml
configuration/: index.html
contributing/: index.html
custom-dashboards/: index.html
custom-defenses/: index.html
defense-pipeline/: index.html
deploy/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  service.yaml  serviceaccount.yaml
docker/: Dockerfile  docker-compose.yml
docs/: adapters.md  api-reference.md  api.md  architecture.md  configuration.md  contributing.md  custom-dashboards.md  custom-defenses.md  defense-pipeline.md  editions.md  getting-started.md  index.md  mcp-integration.md  quickstart.md
editions/: index.html
examples/: crewai_agent.py  custom_defense.py  langchain_agent.py  quickstart.py
examples/docker_sidecar/: app.py  docker-compose.yml  shield-config.yaml
examples/mcp_claude_code/: .mcp.json  README.md
examples/mcp_cursor/: README.md
getting-started/: index.html
mcp-integration/: index.html
quickstart/: index.html
scripts/: audit_clawhavoc.py
search/: search_index.json
skill/: SKILL.md
src/goop_shield/: __init__.py  _config_loader.py  _version.py  aggregation.py  app.py  audit.py  behavior.py  cli.py  client.py  config.py  deception.py  defender.py  mcp.py  middleware.py  models.py  policy.py  session_tracker.py  telemetry.py  validation_bridge.py
src/goop_shield/_experimental/: __init__.py  drift_detector.py  memory_integrity.py  supply_chain.py
src/goop_shield/adapters/: __init__.py  base.py  crewai.py  generic.py  langchain.py  openclaw.py
src/goop_shield/defenses/: __init__.py  base.py  behavioral.py  content.py  crypto.py  domain_reputation.py  heuristic.py  indirect_injection.py  ioc_matcher.py  memory.py  output.py  (+2 more)
tests/: conftest.py  test_adapters.py  test_aggregation.py  test_alignment_canaries.py  test_alignment_probes.py  test_app.py  test_audit.py  test_audit_clawhavoc.py  test_behavior.py  test_behavioral_defenses.py  test_bypass_fixes.py  test_client.py  test_config.py  test_consistency_checker.py  test_content_defenses.py  test_crypto_defenses.py  test_deception.py  test_defender.py  test_defenses.py  test_domain_reputation.py  test_drift_supply_chain.py  test_enterprise.py  test_exfil_defense.py  test_gooprange_bridge.py  test_indirect_injection.py  test_integration.py  test_intel.py  test_ioc_matcher.py  test_mcp.py  test_memory_integrity.py  test_middleware.py  test_normalizer.py  test_obfuscation_defense.py  test_output_scanners.py  test_p0_fixes.py  test_pentest_regression.py  test_policy.py  test_profiles.py  test_ranking.py  test_red_runner_metrics.py  (+16 more)
tests/load/: locustfile.py
(+29 files in other folders)
